# mlops-zoomcamp

./: .gitignore  pyproject.toml
01-intro/: homework-01.ipynb
02-experiment-tracking/homework/: homework-02.ipynb  hpo.py  register_model.py  train.py
05-monitoring/: evidently_metrics_calculation.py
05-monitoring/dashboards/: data_drift.json
cohorts/2024/04-deployment/homework/: Dockerfile  predict.py  score.py  starter.ipynb  test.py
