[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "mlops zoomcamp course"
authors = ["dario248 <paezdario24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
pyarrow = "15.0.0"
mlflow = "^2.13.0"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"
fastparquet = "^2024.2.0"
boto3 = "^1.34.109"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
